2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Add checks for libsocket and libnsl.

2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/jtag.h: Lengthen JTAG_RESPONSE_TIMEOUT so slower systems have
	a fair chance to respond.
	* src/remote.cc: Passing an int to read(2) is not bigendian friendly,
	so pass an unsigned char instead.

2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* src/remote.cc: Add handling of 'C' packet. Using 'sig SIGHUP' command
	from gdb will cause avarice to reset the user program.

2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* Bootstrap: Remove need to run autotools in src.
	* configure.in: Remove need for src/configure.in.
	* src/configure.in: Remove file.

2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/Makefile.am (avarice_SOURCES): Add ioreg.cc and ioreg.h.
	* src/ioreg.cc: New file.
	* src/ioreg.h: New file.
	* src/jtag.h: Add io_reg_defs field to jtag_device_def_type struct.
	* src/jtagio.cc: Add io_reg_defs field initializers.
	* src/remote.cc: Add 'q' packet handling of "Ravr.io_reg" queries.

2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* src/remote.cc: Break out of 'g' packet case if an error occurs.

2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/remote.cc: When handling a 'g' packet, only read the 32 GPR's,
	SPL, SPH, and SREG. Reading some other io registers can have side
	effects.

2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/jtag.h: Remove unused deviceType enum.
	* src/jtagprog.cc: Tell the jtagbox the device dependant flash and
	eeprom pagesizes based on device definition info.

2003-03-26  Theodore A. Roth  <troth@openavr.org>
[Contributed by Jeff Rose <rosejn@Colorado.EDU>]
